# PartiallyObservedInverseGames.jl

./: .gitignore  .gitmodules  CITATION.bib  LICENSE  Manifest.toml  Manifest.toml-1.7.1  Project.toml  README.md  codecov.yml  data.dvc  figures.dvc  lq_case.jl  main.jl  pyproject.toml  random_baseline.jl
.dvc/: config
.github/workflows/: build.yml
data/: .gitignore  highway.bson.dvc  unicycle.bson.dvc
data/highway/: .gitignore  cache.bson.dvc  errstats.json.gz.dvc  estimates.json.gz.dvc  trajectory_data_estimates.json.gz.dvc  trajectory_data_gt.json.gz.dvc  trajectory_data_obs.json.gz.dvc
data/receding_horizon/: .gitignore  cache.bson.dvc
data/unicycle/: .gitignore  cache.bson.dvc  errstats.json.gz.dvc  estimates.json.gz.dvc  (+3 more)
experiments/: cost_heatmaps.jl  distributed.jl  front_figure.jl  highway.jl  highway_sanity_check.jl  kkt_residual_vs_constraint.jl  preamble.jl  receding_horizon.jl  run_experiments.jl  saveviz.jl  simple_caching.jl  test_highway.jl  unicycle.jl  unicycle_online.jl  utils.jl  visualization.jl  worstcase_check.jl
src/: CostUtils.jl  DynamicsModelInterface.jl  ForwardGame.jl  ForwardOptimalControl.jl  InverseGames.jl  InverseOptimalControl.jl  InversePreSolve.jl  JuMPOptimalControl.jl  JuMPUtils.jl  PartiallyObservedInverseGames.jl  SolverUtils.jl  TrajectoryVisualization.jl  lq_case.jl  nonlq_case.jl  ol-nash.jl  unicycle.jl  utils.jl
test/: DoubleIntegrator.jl  Unicycle.jl  collision_avoidance_game.jl  lq_control.jl  nonlq_control.jl  ol_nash_game.jl  runtests.jl  shared_unicycle_game.jl  unicycle_game.jl
test/utils/: CostUtils.jl  (+5 more)
(+21 files in other folders)
