[tool.poetry]
name = "partiallyobservedinversegames.jl"
version = "0.1.0"
description = ""
authors = ["lassepe <lasse.peters@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = {extras = ["gdrive", "http"], version = "^2.8.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
